{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 18,
  "lineage": "bc504559-0f98-150a-2c96-7d5c9d5deee4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05b10e08d247fb927",
            "arn": "arn:aws:ec2:us-east-1:804949073600:instance/i-0c049b51082149b8c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c049b51082149b8c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee475e2073edbe5b",
            "private_dns": "ip-10-0-1-15.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.15",
            "public_ip": "54.227.9.57",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0334e4f63eedb89be",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-086e57159f798080e",
            "tags": {
              "Name": "IvolveWebServer"
            },
            "tags_all": {
              "Name": "IvolveWebServer"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d40d65e801321959"
            ]
          },
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804949073600:internet-gateway/igw-0a222c0cea23a12de",
            "id": "igw-0a222c0cea23a12de",
            "owner_id": "804949073600",
            "tags": {
              "Name": "My-Internet-Gateway"
            },
            "tags_all": {
              "Name": "My-Internet-Gateway"
            },
            "vpc_id": "vpc-0980c7be98cc83d9c"
          },
          "dependencies": [
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "default_public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a222c0cea23a12de",
            "id": "r-rtb-0820dd37b9d71fd4b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0820dd37b9d71fd4b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804949073600:route-table/rtb-0820dd37b9d71fd4b",
            "id": "rtb-0820dd37b9d71fd4b",
            "owner_id": "804949073600",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a222c0cea23a12de",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-Route-Table"
            },
            "tags_all": {
              "Name": "Public-Route-Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0980c7be98cc83d9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee2b23662c9b7445",
            "route_table_id": "rtb-0820dd37b9d71fd4b",
            "subnet_id": "subnet-086e57159f798080e"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804949073600:security-group/sg-0d40d65e801321959",
            "description": "Allow inbound SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d40d65e801321959",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "804949073600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2-SG"
            },
            "tags_all": {
              "Name": "EC2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0980c7be98cc83d9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804949073600:security-group/sg-0c07d3139267b3fbf",
            "description": "Allow inbound MySQL from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c07d3139267b3fbf",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d40d65e801321959"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "804949073600",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS-SG"
            },
            "tags_all": {
              "Name": "RDS-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0980c7be98cc83d9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804949073600:subnet/subnet-0455f92a93f564794",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0455f92a93f564794",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804949073600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet"
            },
            "tags_all": {
              "Name": "Private-Subnet"
            },
            "vpc_id": "vpc-0980c7be98cc83d9c"
          },
          "dependencies": [
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804949073600:subnet/subnet-0d781718f412e1a51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d781718f412e1a51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "804949073600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private-Subnet-B"
            },
            "tags_all": {
              "Name": "Private-Subnet-B"
            },
            "vpc_id": "vpc-0980c7be98cc83d9c"
          },
          "dependencies": [
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804949073600:subnet/subnet-086e57159f798080e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086e57159f798080e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804949073600",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet"
            },
            "tags_all": {
              "Name": "Public-Subnet"
            },
            "vpc_id": "vpc-0980c7be98cc83d9c"
          },
          "dependencies": [
            "aws_vpc.ivolve_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ivolve_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804949073600:vpc/vpc-0980c7be98cc83d9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00830b7a6d6c52520",
            "default_route_table_id": "rtb-04e412be9af2229f6",
            "default_security_group_id": "sg-0660ad3f17828e95f",
            "dhcp_options_id": "dopt-0f117660d4ff17c16",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0980c7be98cc83d9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04e412be9af2229f6",
            "owner_id": "804949073600",
            "tags": {
              "Name": "ivolveVPC"
            },
            "tags_all": {
              "Name": "ivolveVPC"
            }
          }
        }
      ]
    }
  ]
}